# pyspark-ai

./: .flake8  .gitignore  404.html  CNAME  CONTRIBUTING.md  Makefile  Notice  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run_spark_connect.sh
.github/workflows/: CI.yml  build_and_test.yml  lint.yml  lint_and_spell.yml  site.yml  website.yml
benchmark/: pyspark_ai.jsonl  spark_ai_cache.json  wiki_sql.py
benchmark/plot/: benchmark_main.py  benchmark_util.py
benchmark/plot/data/: README.md
benchmark/plot/data/train/: prep.py  train-code.json  train-golden.json  train.json
benchmark/wikisql/: wiki_sql.py
benchmark/wikisql/data/: similarvaluetest.jsonl  test_sample.jsonl  test_sample.tables.jsonl  train_sample.jsonl  train_sample.tables.jsonl
benchmark/wikisql/test/: test_similar_value_tool_e2e.tables.jsonl
cache/: index.html
contributing/: index.html
data_ingestion/: index.html
dataframe_explanation/: index.html
dataframe_transformation/: index.html
dataframe_verification/: index.html
docs/: cache.md  contributing.md  data_ingestion.md  dataframe_explanation.md  dataframe_transformation.md  dataframe_verification.md  gen_ref_pages.py  index.md  installation_and_setup.md  plot.md  resources.md  udf_generation.md
docs/examples/: create_udf.ipynb  spark_ai_cache.json  transform_dataframe.ipynb  vector_similarity_search.ipynb
docs/notebooks/: example.ipynb
docs/stylesheets/: extra_css.css
examples/: .spark_llm.db  create_udf.ipynb  dais_demo_cache.json  dais_feature_demo.ipynb  example.ipynb  pivot.ipynb  spark_ai_cache.json  spark_llm_cache.json  transform_dataframe.ipynb  vector_similarity_search.ipynb  window.ipynb
installation_and_setup/: index.html
notebooks/create_udf/: index.html
notebooks/transform_dataframe/: index.html
notebooks/vector_similarity_search/: index.html
plot/: index.html
pyspark_ai/: __init__.py  ai_utils.py  cache.py  code_logger.py  file_cache.py  llm_chain_with_cache.py  llm_utils.py  prompt.py  pyspark_ai.py  python_executor.py  react_spark_sql_agent.py  search_tool_with_cache.py  spark_llm_assistant.py  spark_sql_chain.py  spark_utils.py  temp_view_utils.py  tool.py
resources/: index.html
spark_llm/: __init__.py  cache.py  code_logger.py  file_cache.py  llm_chain_with_cache.py  llm_utils.py  prompt.py  search_tool_with_cache.py  spark_llm_assistant.py
tests/: pyspark_generation_test.json  test_ai_tools.py  test_ai_utils.py  test_cache.json  test_cache_history.json  test_end_to_end.py  test_pyspark_llm_test_gen.py  test_python_executor.py  test_spark_ai.py  test_spark_connect.py  test_spark_llm_assistant.py  test_temp_view_utils.py  test_wiki_sql.py
tests/data/: 2011_february_aa_flight_paths.csv  test_similar_value_tool_e2e.jsonl  test_similar_value_tool_e2e.tables.jsonl  test_transform.tables.jsonl  test_transform_e2e.tables.jsonl  test_transform_query_col.tables.jsonl  test_transform_without_similar_value_tool.jsonl
udf_generation/: index.html
